--- a/includes/docs/lib/prism/css/prism.css
+++ b/includes/docs/lib/prism/css/prism.css
@@ -1,112 +1,2 @@
 
-/* Tommorow night theme */
-
-code[class*="language-"],
-pre[class*="language-"] {
-	text-shadow: 0 1px rgba(0, 0, 0, 0.3);
-	font-family: Consolas, Monaco, 'Andale Mono', monospace;
-	direction: ltr;
-	text-align: left;
-	white-space: pre;
-	word-spacing: normal;
-	word-break: normal;
-	line-height: 1.5;
-
-	-moz-tab-size: 4;
-	-o-tab-size: 4;
-	tab-size: 4;
-
-	-webkit-hyphens: none;
-	-moz-hyphens: none;
-	-ms-hyphens: none;
-	hyphens: none;
-}
-
-/* Code blocks */
-pre[class*="language-"] {
-	padding: 1em;
-	margin: .75em 0;
-	overflow: auto;
-	border-radius: 0.3em;
-}
-
-:not(pre) > code[class*="language-"],
-pre[class*="language-"] {
-	background: #1B1C1D; /* #272822; */
-}
-
-/* Inline code */
-:not(pre) > code[class*="language-"] {
-	padding: .1em;
-	border-radius: .3em;
-}
-
-code[class*="language-"],
-pre[class*="language-"] {
-	color: #f8f8f2;
-}
-
-.token.comment,
-.token.prolog,
-.token.doctype,
-.token.cdata {
-	color: slategray;
-}
-
-.namespace {
-	opacity: .7;
-}
-
-.token.property,
-.token.tag,
-.token.constant,
-.token.symbol,
-.token.deleted {
-	color: #CC7070; /* #cc6666; #f92672; #e2777a */
-}
-
-.token.boolean,
-.token.number {
-	color: #ae81ff;
-}
-.token.attr-value,
-.token.selector,
-.token.string,
-.token.char,
-.token.builtin,
-.token.inserted {
-	color: #89AF85; // #86A284; /* #b5bd68; #a6e22e; #7ec699 */
-}
-
-.token.operator,
-.token.entity,
-.token.url,
-.language-css .token.string,
-.style .token.string,
-.token.variable {
-	color: #f8f8f2;
-}
-
-.token.attr-name,
-.token.atrule {
-	color: #E8BF6A; /* #f8c555; #e6db74; */
-}
-
-.token.punctuation,
-.token.bracket,
-.token.keyword {
-	color: #7592a3; /* #81a2be; #6193FF; 66d9ef #6196cc */
-}
-
-.token.regex,
-.token.important {
-	color: #fd971f;
-}
-
-.token.important {
-	font-weight: bold;
-}
-
-.token.entity {
-	cursor: help;
-}
+code[class*=language-],pre{color:#abb2bf;background:0 0;text-align:left;white-space:pre;word-spacing:normal;word-break:normal;word-wrap:normal;line-height:1.5;-moz-tab-size:4;-o-tab-size:4;tab-size:4;-webkit-hyphens:none;-ms-hyphens:none;hyphens:none}pre{padding:0;margin:.5em 0;overflow:auto;display:flex}:not(pre)>code[class*=language-],pre,pre code{background:#171717}:not(pre)>code[class*=language-]{padding:.1em;border-radius:.3em;white-space:normal}.token.bold{font-weight:700}.token.italic{font-style:italic}.token.block-comment,.token.cdata,.token.comment,.token.doctype,.token.prolog{color:#5c6370}.token.important,.token.punctuation{color:#999}.token.deleted,.token.namespace,.token.tag{color:#e06c75}.token.function-name,.token.property,.token.variable{color:#56a6ed}.token.boolean,.token.function,.token.number,.token.package{color:#cb8f5b}.token.attr-name,.token.class-name,.token.constant,.token.symbol{color:#e5c07b}.token.atrule,.token.builtin,.token.keyword,.token.selector{color:#c678dd}.token.attr-value,.token.char,.token.regex,.token.string{color:#8dbb6e}.token.operator{color:#887bb5}.token.entity,.token.url{color:#56b6c2}.token.inserted{color:#8dbb6e}
